--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1977,7 +1977,7 @@ form textarea {
  * Header Styles
  */
 .site-header {
-  background-color: #2b2b2b;
+  background: url('./images/background_desenho.png');
   position: relative;
 }
 .site-header > .container {
