--- a/public_html/style.css
+++ b/public_html/style.css
@@ -2464,7 +2464,7 @@ section header .all {
 .page .price {
   font-size: 30px;
   font-size: 2.1428571429em;
-  color: #45b77d;
+  color: #black;
   display: block;
   margin-bottom: 30px;
 }
